# CASE-trading-algorithm-API

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1256d23f63ed_init_tables_symbols_and_prices.py  4844b721ae30_add_backtests_tables.py  9567d8da39cb_add_indicators_table.py  eed1ac69007e_add_indicators_table.py
app/adapters/: market_data.py
app/api/: main.py  routes_backtests.py  routes_data.py  routes_health.py
app/core/: collectors.py  indicators.py  strategies.py
app/db/: models.py  seed.py  session.py
app/schemas/: backtests.py  data.py
app/services/: backtest_results_service.py  backtest_service.py  data_service.py
notebooks/: ML_model.ipynb  backtest_analysis.ipynb  data_exploration.ipynb
scripts/: smoke.ps1
tests/: conftest.py  test_backtests.py  test_data_update.py  test_health.py
